# Coral-Browser-Agent

./: .env_sample  .gitignore  browser_tools.json  main.py  pyproject.toml  run_agent.ps1
utils/: browser_agent.py  coral_tools.py  manual_input.py
